[gd_scene load_steps=5 format=3 uid="uid://o1vfrygpfq4w"]

[ext_resource type="Script" uid="uid://c1hk3q6qv63pe" path="res://scripts/Items/randomizer.gd" id="1_87yn6"]
[ext_resource type="PackedScene" uid="uid://cv4fuarnisraj" path="res://scenes/golden_skull.tscn" id="1_nb0ph"]
[ext_resource type="PackedScene" uid="uid://dee1056r7yf3j" path="res://scenes/red_potion.tscn" id="2_87yn6"]
[ext_resource type="PackedScene" uid="uid://cs2lq281f0lod" path="res://scenes/blue_potion.tscn" id="3_xtx2p"]

[node name="Randomizer" type="Node"]
script = ExtResource("1_87yn6")

[node name="GoldenSkull" parent="." instance=ExtResource("1_nb0ph")]
position = Vector2(-3, -16)

[node name="RedPotion" parent="." instance=ExtResource("2_87yn6")]

[node name="BluePotion" parent="." instance=ExtResource("3_xtx2p")]
